--- a/example.html
+++ b/example.html
@@ -5,8 +5,8 @@
         src1="http://localhost:5500/getBaseUrl.js"
         src2="http://localhost:8080/getBaseUrl.js"
         src3="http://localhost/getBaseUrl.js"
-        src4="https://raw.githubusercontent.com/bigujun/multi-source-script-tag/master/getBaseUrl.js"
-        src4="getBaseUrl.js"
+        src4="https://bigujun.github.io/multi-source-script-tag/getBaseUrl.js"
+        src5="getBaseUrl.js"
         onerror="alert('Failed: Servers are unreachable!')"
     ></script>
 </head>
