--- a/example.html
+++ b/example.html
@@ -1,12 +1,13 @@
+<!-- bigujun - 2021 -->
 <!DOCTYPE html>
 <head>
     <title>Document</title>
     <script src="multisrc.js" 
-        src1="http://localhost:5500/getBaseUrl.js"
-        src2="http://localhost:8080/getBaseUrl.js"
-        src3="http://localhost/getBaseUrl.js"
-        src4="https://bigujun.github.io/multi-source-script-tag/getBaseUrl.js"
-        src5="getBaseUrl.js"
+        src1="http://localhost:5500/getOrigin.js"
+        src2="http://localhost:8080/getOrigin.js"
+        src3="http://localhost/getOrigin.js"
+        src4="https://bigujun.github.io/multi-source-script-tag/getOrigin.js"
+        src5="getOrigin.js"
         onerror="alert('Failed: Servers are unreachable!')"
     ></script>
 </head>
